--- a/src/prototype/app/views/pconfig/landing-page-config.html
+++ b/src/prototype/app/views/pconfig/landing-page-config.html
@@ -52,8 +52,16 @@
             text: "Extensions"
           },
           {
+            href: "/pconfig/extension-type-search",
+            text: "Extension Types"
+          },
+          {
             href: "/pconfig/message-search",
             text: "Strings"
+          },
+          {
+            href: "/pconfig/admin-search",
+            text: "Administrators"
           },
           {
             href: "/pconfig/landing-page-dashboard",
