--- a/src/prototype/app/views/version-a/type-1-content/overview.html
+++ b/src/prototype/app/views/version-a/type-1-content/overview.html
@@ -242,8 +242,14 @@
         Your choice
       </h2>
       <p>
-        You can stop your confidential patient information being used for research and planning. <a href="">Find out how to make your choice.</a>
+        You can stop your confidential patient information being used for research and planning.
       </p>
+ <p> 
+   To Stop your GP surgery from sharing your data use the Type 1 online service, or submit a Type 1 opt out form to your registered GP Practice
+   </p>
+ <p>  
+   To stop NHS Digital and other health and care organisations from sharing your data for research and planning
+   </p>
       <p>
         If you're happy with your confidential patient information being used for research and planning you do not need to do anything.
       </p>
