--- a/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
+++ b/src/prototype/app/views/version-b/nhsuk-opt-out-of-sharing.html
@@ -173,32 +173,40 @@
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
-            Choose if your GP medical records is shared for research and planning
+            Stop your GP surgery from sharing your data
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>This is called the 'Type 1 Opt-out'.</p>
-          <p>If you choose this opt-out, the data held in your GP medical records won't be shared with other healthcare professionals for the purposes of your individual care. It is also shared with other organisations to support health and care planning and research;</p>
-          <p>To opt out online, check if you have opted out or find out more, visit the <a href="/version-b/type-1-content/overview">Type 1 Opt-out service page</a>; or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</p>
-          <p>If you choose a <a href="/version-b/type-1-content/overview">Type 1 Opt-out</a>, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
-        </div>
+          <p>This is called the 'Type 1 Opt-out' and is applied to your GP record.</p>
+          <ul>
+            <li>General Practice Data for Planning and Research (GPDPR) uses GP data to collect vital health and care planning and research. To find out more about how data is used, visit the <a href="https://digital.nhs.uk/data-and-information/data-collections-and-data-sets/data-collections/general-practice-data-for-planning-and-research">GPDPR webpage</a>.</li>
+            <li>You may choose a Type 1 opt out for yourself by entering your choice in the <a href="/version-b/type1-question">Type 1 online service</a>.</li>
+            <li>You may request a Type 1 opt out for yourself or someone you care for by filling in an opt-out form and return it to your/their registered GP surgery. <a href="https://assets.nhs.uk/nhsuk-cms/documents/Type1Opt-outform.docx">Download a Type 1 Opt-out form </a></li>
+            </ul>
+            <p>If you choose a Type 1 Opt-out, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
+            
+              <img width = "100%" height= "100%" src="/images/Picture1.png"/>
+             <p></p>
+            <p>Find out more about Type 1 Opt-out from NHS Digital's transparency notice</p>
+          </div>
       </details>
 
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
-            Choose if NHS Digital and other health and care organisations can share your data for research and planning
+            Stop NHS Digital and other health and care organisations from sharing your data for research and planning
           </span>
         </summary>
         <div class="nhsuk-details__text">
-          <p>This is called the 'National Data Opt-out'.</p>
+          <p>This is called the 'National Data Opt-out' and is applied to your NHS health record.</p>
           <ul>
-            <li>To opt out online or find out more, visit the <a href="https://www.nhs.uk/your-nhs-data-matters">National Data Opt-Out service page</a>.</li>
+            <li>To opt out online or find out more, visit the <a href="/version-a/type-1-content/make-your-choice">Make your choice</a>National Data Opt-Out service page</a>.</li>
             <li>If you choose this opt-out, NHS Digital and other health and care organisations will not be able to share any of your personal data with other organisations for research and planning, except in certain situations. For example, when required by law.</li>
-            <li>If you want to check if you have opted out, you can enter your details again visiting the <a href="https://www.nhs.uk/your-nhs-data-matters">National Data Opt-Out service</a> or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</li>
+            <li>If you want to check if you have opted out, you can enter your details again visiting the <a href="/version-a/type-1-content/make-your-choice">Make your choice</a> or check your settings in the <a href="https://www.nhs.uk/nhs-app/">NHS App</a>.</li>
           </ul>
-          <p>If you choose a Type 1 Opt-out, your GP will not share your data for research and planning. However, NHS Digital will still be able to collect and share data from other healthcare providers, such as hospitals.</p>
-      
+         
+            <img  width = "100%" height="100%" src="/images/Picture2.png"/>
+            
         </div>
       </details>
 
